Fix ReactQuill WhiteSpace

--- a/app/[locale]/globals.css
+++ b/app/[locale]/globals.css
@@ -37,3 +37,7 @@
 .hover {
     cursor: pointer;
 }
+
+.ql-editor {
+    white-space: normal !important;
+}
